# web

./: .gitignore  .prettierrc  config.example.json  pyproject.toml  requirements.txt
latexmt_web/: configure.py  db.py  dirs.py  format.py  helpers.py  job.py  server.py  translator.py  worker.py
latexmt_web/static/css/: main.css
latexmt_web/static/js/: latexmt.js
latexmt_web/templates/: direct.html  index.html
