[project]
name = "latexmt-web"
version = "1.1.2"
authors = [
  { name="Calvin Hoy", email="calvin.hoy@screee.ee" },
]
description = "Flask Web Interface for LaTeXMT"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Linux",
]
dependencies = [
  "latexmt-core",
  "flask",
  "flask-executor",
  "flask-sock",
  "dacite",
]

[project.urls]
Homepage = "https://github.com/latexmt/web"
Issues = "https://github.com/latexmt/web/issues"

[tool.setuptools.package-data]
"latexmt_web.templates" = ["*.html"]
"latexmt_web.static" = ["styles/*.css", "js/*.js"]
